--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "test:verbose": "jest --verbose",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:html": "jest --reporters=default --reporters=jest-html-reporter"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -54,7 +56,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "jest-html-reporter": "^3.6.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -80,7 +83,8 @@
       "/node_modules/",
       "/dist/",
       "/migrations/",
-      "/src/config/"
+      "/src/config/",
+      "test-report.html"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
